# linalg

./: CMakeLists.txt  README.md  build_and_test.sh  commit_progress.sh
cpp/: CMakeLists.txt  build_and_test.sh
cpp/include/: eigen.h  lu_decomposition.h  qr_decomposition.h
cpp/tests/: CMakeLists.txt  eigen_test.cpp  lu_decomposition_test.cpp  matrix_test.cpp  qr_decomposition_test.cpp
include/: eigen.h  lu_decomposition.h  matrix.h  orthogonal.h  qr_decomposition.h  vector.h
include/util/: rng.h  util.h
java/: build.gradle  run.sh  settings.gradle
java/java/matrix/: Matrix.java
java/lib/: build.gradle
java/lib/src/main/java/java/: Library.java
java/lib/src/test/java/java/: LibraryTest.java
java/src/main/java/io/testing/: Cart.java  CheckoutService.java  Item.java  PaymentService.java  TransactionRecord.java
java/src/main/java/linalg/algorithms/: ConcurrentGivensRotation.java  GivensRotation.java  GramSchmidt.java  Householder.java  LUDecomposition  LUDecomposition.java  QRDecomposition.java  QRDecompositionGramSchmidt.java
java/src/main/java/linalg/application/: MainMenu.java  MainMenuController.java  MatrixViewController.java  StatisticsController.java
java/src/main/java/linalg/decomp/: lu_decomp.java
java/src/main/java/linalg/matrix/: COOMatrix.java  COOMatrixBuilder.java  DenseMatrix.java  DenseMatrixBuilder.java  Matrix.java  MatrixBuilder.java  MatrixCoordinate.java  MatrixEntry.java  MatrixFactory.java  MatrixUtils.java  SparseMatrix.java
java/src/main/java/linalg/random/: RandomMatrices.java  RandomVectors.java
java/src/main/java/linalg/vector/: DenseVector.java  DenseVectorBuilder.java  Vector.java  VectorBuilder.java  VectorEntry.java  VectorFactory.java  VectorUtils.java
java/src/main/matrix/: Matrix.java
java/src/main/resource/: MainMenu.fxml  MatrixView.fxml  StatisticsView.fxml
java/src/test/java/: MatrixTest.java
java/src/test/java/io/testing/: CartTest.java  CheckoutServiceTest.java  ItemTest.java
java/src/test/java/linalg/algorithms/: ConcurrentGivensRotationTest.java  GivensRotationTest.java  (+5 more)
tests/: CMakeLists.txt  concurrency_tests.cpp  eigen_test.cpp  lu_decomposition_test.cpp  matrix_test.cpp  orthogonal_test.cpp  qr_decomposition_test.cpp  vector_test.cpp
(+18 files in other folders)
